adding createRelationship, fixing some stylying

--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,17 @@
 <head>
   <meta charset="utf-8"/>
   <title>Ambio API Testing</title>
+    <style>
+        a {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <h3>Ambio API Tests: </h3>
     <p>Use these to test the funcionality listed.</p>
     <a href="./error.html">Error Test</a>
     <a href="./createUser.html">Create User Test</a>
+    <a href="./createRelationship.html">Create Relationship Test</a>
 </body>
 </html>
