--- a/client/createUser.html
+++ b/client/createUser.html
@@ -15,6 +15,14 @@
     <form id="createUserForm" name="createUserForm" action="http://localhost:3000/createUser" method="POST">
       <label for="userName">User Name: </label>
       <input id="userNameInput" type="text" name="userName" placeholder="johnSmith01"/>
+      <label for="email">Email: </label>
+      <input id="emailInput" type="text" name="email" placeholder="john.smith@mail.com"/>
+      <label for="password">Password: </label>
+      <input id="passwordInput" type="text" name="password" placeholder="*********"/>
+      <label for="confirmPassword">Confirm Password: </label>
+      <input id="confirmPasswordInput" type="text" name="confirmPassword" placeholder="*********"/>
+      <label for="email">Email: </label>
+      <input id="emailInput" type="text" name="email" placeholder="johnSmith01"/>
       <label for="firstName">First Name: </label>
       <input id="firstNameInput" type="text" name="firstName" placeholder="john"/>
       <label for="lastName">Last Name: </label>
