fixing accidental partial delete

--- a/client/createUser.html
+++ b/client/createUser.html
@@ -16,7 +16,7 @@
       <label for="userName">User Name: </label>
       <input id="userNameInput" type="text" name="userName" placeholder="johnSmith01"/>
       <label for="email">Email: </label>
-      <input id="emailInput" type="text" name="email" placeholder="john.smith@mail.com"/> placeholder="*********"/>
+      <input id="emailInput" type="text" name="email" placeholder="john.smith@mail.com"/>
       <label for="email">Email: </label>
       <input id="emailInput" type="text" name="email" placeholder="johnSmith01"/>
       <label for="firstName">First Name: </label>
