--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <p>Use these to test the funcionality listed.</p>
     <a href="./error.html">Error Test</a>
     <a href="./createUser.html">Create User Test</a>
+    <a href="./getAllAccounts.html">Get Accounts Test</a>
     <a href="./createRelationship.html">Create Relationship Test</a>
 </body>
 </html>
